--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^2.44.4"
+		"@supabase/supabase-js": "^2.44.4",
+		"@vapi-ai/web": "^2.1.0"
 	}
 }
