--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.44.4",
-		"@vapi-ai/web": "^2.1.0"
+		"@vapi-ai/web": "^2.1.0",
+		"bits-ui": "^0.21.12",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.417.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1",
+		"twemoji": "^14.0.2"
 	}
 }
