--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"lucide-svelte": "^0.417.0",
+		"mode-watcher": "^0.4.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
