--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"lucide-svelte": "^0.417.0",
 		"marked": "^14.0.0",
 		"mode-watcher": "^0.4.1",
+		"openai": "^4.55.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
