--- a/package.json
+++ b/package.json
@@ -20,23 +20,29 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.7",
+		"ts-node": "^10.9.2",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.5.4",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.44.4",
+		"@types/turndown": "^5.0.5",
 		"@vapi-ai/web": "^2.1.0",
 		"bits-ui": "^0.21.12",
+		"cheerio": "^1.0.0",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"groq-sdk": "^0.5.0",
+		"jsdom": "^24.1.1",
 		"lucide-svelte": "^0.417.0",
 		"marked": "^14.0.0",
 		"mode-watcher": "^0.4.1",
 		"openai": "^4.55.1",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"turndown": "^7.2.0",
+		"waterfall-fetch": "^1.0.0"
 	}
 }
