--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
 		"turndown": "^7.2.0",
-		"waterfall-fetch": "^1.0.0"
+		"waterfall-fetch": "^1.0.0",
+		"zod": "^3.23.8"
 	}
 }
